--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -1,10 +1,789 @@
+@charset "UTF-8";
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body, p, div {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0;
+}
+
+h2 {
+  margin: auto;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type=search] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.footer-link:hover, .navigation__element > *:hover, .button:hover, .logo:hover {
+  transition: all 0.3s ease-out;
+}
+
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
   font-size: 2rem;
   font-family: "Inter", Verdana, sans-serif;
+  color: #636060;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 35px;
+}
+
+h1 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 50px;
+  color: #717171;
+  margin-top: 0;
+  margin-bottom: 45px;
+}
+
+.text__primary {
+  color: #499A18;
+}
+
+.text_secondary {
+  color: #E06733;
+}
+
+h2 {
+  font-family: "Inika", Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+h3 {
+  color: #E06733;
+  text-align: center;
+  padding: 8px 0 13px 0;
+  margin: 0;
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.logo {
+  font-family: "Inika", Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+  color: #010201;
+  text-decoration: none;
+  padding-bottom: 15px;
+  display: inline-flex;
+  align-items: center;
+}
+.logo:hover {
+  color: #E06733;
+}
+
+.logo-name {
+  padding-top: 10px;
+}
+
+.selector {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  display: inline-flex;
+  justify-content: space-between;
+  height: 50px;
+  width: 450px;
+  outline: 0;
+  cursor: pointer;
+  overflow: hidden;
+  border: 0 !important;
+  background-image: url("../../img/prices/accordion_btn.svg");
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.selector > * {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 450px;
+  border-radius: 0px;
+  background-color: #EDF2EC;
+  padding: 5px 20px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  color: #717171;
+}
+
+.select::-ms-expand {
+  display: none;
+}
+
+.select::after {
+  content: "▼";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0;
+  cursor: pointer;
+  pointer-events: none;
+  transition: 0.25s all ease;
+}
+
+option:not {
+  color: aqua;
+}
+
+.button {
+  padding-top: 11px;
+  padding-bottom: 11px;
+  font-family: "Inika", Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  background-color: #EDF2EC;
+  width: 161px;
+  border: 1px solid #E06733;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #E06733;
+  color: #FFFFFF;
+}
+.button_light {
+  background-color: #FFFFFF;
+}
+
+.button__bordered {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  width: 158px;
+  border: 2px solid #E06733;
+  border-radius: 10px;
+  margin-top: 45px;
+}
+
+.button-acordeon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 250px;
+  border-radius: 20px;
+  background-color: #EDF2EC;
+  border: 0;
+  padding: 15px 40px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.wrapper {
+  max-width: 1220px;
+  margin: auto;
+}
+
+.header {
+  background-color: #EDF2EC;
+  padding: 42px 0 42px 0;
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigation {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  align-items: flex-end;
+}
+
+.navigation__element {
+  list-style: none;
+}
+.navigation__element > * {
+  padding: 0;
+  padding-left: 47px;
+  font-family: "Inika", Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 5rem;
+  text-decoration: none;
+  color: #010201;
+}
+.navigation__element > *:hover {
+  color: #E06733;
+}
+
+.element_colored {
+  color: #E06733;
+}
+
+.welcome {
+  background-color: #EDF2EC;
+}
+
+.welcome__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 60px 0 60px 0;
+}
+
+.welcome__content {
+  padding-left: 222px;
+  padding-right: 10px;
+}
+
+about {
+  background-color: #FFFFFF;
+}
+
+.about__wrapper {
+  padding: 93px 0 94px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.about__content {
+  padding-right: 153px;
+  margin-top: 13px;
+}
+.about__content h2 {
+  margin-bottom: 38px;
+}
+
+.about_text {
+  line-height: 30px;
+}
+
+.service {
+  background-color: #EDF2EC;
+}
+
+.service__text {
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  margin: 0;
+  padding-bottom: 36px;
+}
+
+.service__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 215px;
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
+
+.service_btns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.service__item {
+  display: flex;
+  flex-direction: column;
+}
+
+.service_btns > .button {
+  margin-left: 38px;
+}
+
+.service-wrapper {
+  padding-bottom: 66px;
+}
+
+.service__item__bordered {
+  border: 1px solid #E3E1D5;
+  border-radius: 0 0px 20px 20px;
+  margin-bottom: 55px;
+}
+
+.ico {
+  display: inline-block;
+  width: 16px;
+  height: 17px;
+  vertical-align: middle;
+}
+
+.ico__light {
+  background-image: url(../img/prices/accordion_btn.svg);
+}
+
+.ico__dark {
+  background-image: url(../img/contacts/accordion_btn\ \(1\).svg);
+}
+
+.layout-3-column {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.prices h2 {
+  font-family: "Inter", Verdana, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+  color: #000000;
+}
+
+.price__btns {
+  display: inline-flex;
+  flex-direction: column;
+  padding: 18px 0;
+  border: 1px solid #EDF2EC;
+  border-radius: 20px;
+}
+.price__btns > * {
+  margin: 16px 41px;
+}
+
+.prices__wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.left-side {
+  margin-left: 438px;
+  margin-top: 40px;
+  margin-bottom: 115px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.left-side h2 {
+  text-align: end;
+}
+.left-side .button {
+  margin: 42px 0 36px 0;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+}
+.right-side h2 {
+  margin: 40px 0 57px 0;
+  line-height: 52px;
+}
+
+.contacts {
+  background-color: #EDF2EC;
+}
+.contacts h2 {
+  margin-top: 60px;
+  font-family: "Inika";
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+.contacts__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact__woman {
+  margin-top: 53px;
+  margin-bottom: 0;
+  display: flex;
+}
+
+.contact__city input {
+  border: 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 40px;
+  letter-spacing: 0.05em;
+  color: #717171;
+  padding: 5px 0 5px 20px;
+  background-color: no;
+}
+
+.selector {
+  margin-top: 148px;
+}
+
+.contact__header {
+  display: flex;
+  justify-content: center;
+  padding-left: 41px;
+}
+
+.footer-link {
+  cursor: pointer;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 50px;
+  text-decoration: none;
+  color: #000000;
+}
+.footer-link:hover {
+  color: #E06733;
+}
+
+.logo-social {
+  cursor: pointer;
+  margin-left: 23px;
+}
+
+.footer-social {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-top: 8px;
+}
+
+.footer_center {
+  text-align: center;
+  margin-left: 20px;
+}
+
+.footer-development {
+  display: flex;
+  align-items: center;
+  padding-bottom: 8px;
+}
+.footer-development > * {
+  margin-right: 20px;
+  color: #000000;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 50px;
+  text-decoration: none;
+}
+
+.footer_wrapper {
+  margin-top: 40px;
 }
 
 /*# sourceMappingURL=style.css.map */
