--- a/plants/sass/style.scss
+++ b/plants/sass/style.scss
@@ -1,2 +1,17 @@
+@import "base/normalize";
+@import "abstract/constant";
+@import "abstract/placeholder";
+@import "abstract/mixin";
 @import "base/base";
-@import "abstract/constant"
+@import "base/selector";
+@import "base/buttons";
+@import "layouts/wrapper";
+@import "layouts/header";
+@import "layouts/welcome";
+@import "layouts/about-us";
+@import "layouts/service";
+@import "base/ico";
+@import "layouts/columns";
+@import "layouts/prices";
+@import "layouts/contact-us";
+@import "layouts/footer";
