feat: media mixins

--- a/plants/sass/abstract/_constant.scss
+++ b/plants/sass/abstract/_constant.scss
@@ -7,5 +7,8 @@ $color-heading: #717171;
 $color-text: #636060;
 
 $content-width: 1220px;
+$tablet-width: 768px;
+$mobile-big-width: 380px;
+$mobile-small-width: 320px;
 
 $font-aditional:'Inika', Verdana, sans-serif;
