--- a/plants/sass/base/_buttons.scss
+++ b/plants/sass/base/_buttons.scss
@@ -20,6 +20,12 @@
     &_light {
         background-color: $color-light;
     }
+    @include media-mobile {
+        font-size: 15px;
+        line-height: 20px;
+        padding: 7px 0px;
+        width: 120px;
+    }
 }
 
 .button__bordered {
@@ -32,6 +38,18 @@
     border: 2px solid $color-aditional;
     border-radius: 10px;
     margin-top: 45px;
+    @include media-tablet {
+        margin-top: 37px;
+    }
+    @include media-mobile {
+        font-size: 10px;
+        padding-top: 0;
+        padding-bottom: 0;
+        line-height: 20px;
+        width: 100px;
+        height: 34px;
+        margin-top: 5px;
+    }
     
 }
 
@@ -53,5 +71,9 @@
 
 
     color: #000000;
-    
+    @include media-mobile {
+        font-size: 15px;
+        line-height: 20px;
+        width: 180px;
+    }
 }
