--- a/plants/sass/layouts/_prices.scss
+++ b/plants/sass/layouts/_prices.scss
@@ -5,6 +5,9 @@
         font-size: 40px;
         line-height: 48px;
         color: #000000;
+        @include media-mobile{
+            margin-bottom: 20px;
+        }
     }
 }
 
@@ -18,6 +21,12 @@
     >*{
         margin: 16px 41px;
     }
+    @include media-mobile{
+        padding: 0;
+        >*{
+            margin: 10px 21px;
+        }
+    }
 
 }
 
@@ -25,6 +34,14 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    @include media-tablet{
+        padding: 0 50px;
+    }
+    @include media-mobile{
+        padding: 0 25px;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .left-side {
@@ -40,6 +57,32 @@
     .button{
         margin: 42px 0 36px 0;
     }
+    @include media-tablet{
+        margin: 140px 0 75px;
+        h2 {
+            font-size: 25px;
+            line-height: 35px;
+        }
+        .button{
+            margin: 32px 0 36px 0;
+        }
+    }
+    @include media-mobile{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+        margin-bottom: 0;
+        h2{
+            font-size: 20px;
+            line-height: 35px;
+            text-align: center;
+            padding: 0 10px;
+            margin-bottom: 0;
+        }
+        .button{
+            margin: 12px 0 36px 11px
+        }
+    }
 }
 .right-side {
     display: flex;
@@ -47,5 +90,21 @@
     h2 {
         margin: 40px 0 57px 0;
         line-height: 52px;
+        @include media-tablet{
+            font-size: 35px;
+            line-height: 42px;
+            text-align:left;
+        }
+        @include media-mobile{
+            font-size: 25px;
+            line-height: 30px;
+            text-align: center;
+        }
+    }
+    
+}
+.price-leaf{
+    @include media-mobile {
+        display: none;
     }
 }
