--- a/plants/sass/base/_buttons.scss
+++ b/plants/sass/base/_buttons.scss
@@ -22,6 +22,23 @@
     }
 }
 
+
+.button_selected{
+    padding-top: 11px;
+    padding-bottom: 11px;
+    font-family: $font-aditional;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    width: 161px;
+    border: 1px solid #E06733;
+    border-radius: 5px;
+    background-color:$color-aditional;
+    color: $color-light;
+}
+
+
 .button__bordered {
     font-family: 'Inter';
     font-style: normal;
@@ -54,4 +71,20 @@
 
     color: #000000;
     
+}
+
+.call-us-button{
+    
+    width: 122px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    
+    a{
+        font-weight: 700;
+        font-size: 10px;
+        line-height: 13px;
+        text-align: center;
+        text-decoration: none;
+        color: #000000;
+    }
 }
