--- a/plants/sass/layouts/_contact-us.scss
+++ b/plants/sass/layouts/_contact-us.scss
@@ -36,10 +36,72 @@
 }
 .selector {
     margin-top: 148px;
+    
 }
-
+.select-css::-ms-expand{
+    display: none;
+}
 .contact__header{
     display: flex;
     justify-content: center;
     padding-left: 41px;
+}
+
+.select-css::-ms-expand { display: none; } 
+.select-css:hover { border: none; } 
+.select-css:focus { border: none; }
+
+select{
+    border: none;
+    &:hover{
+        border: none;
+    } 
+    &::-ms-expand { display: none; } 
+}
+
+
+.city-selected{
+    display: none;
+
+}
+
+ .active{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 448px;
+    border: 1px solid #000000;
+    border-radius: 20px;
+    left: 60%;
+    top: 365%;
+    justify-content: center;
+    align-items: center;
+    
+
+        
+}
+.city-adress-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.left-side-city{
+    display: flex;
+    flex-direction: column; 
+    color: black;
+    font-family: 'Inter';
+    ont-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 40px;
+    margin-right: 20px;
+}
+
+.right-side-city{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 40px;
 }
