--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -316,8 +316,8 @@ template {
   box-sizing: border-box;
 }
 
-.footer-link:hover, .navigation__element > *:hover, .button:hover, .logo:hover {
-  transition: all 0.3s ease-out;
+.footer-link:hover, .blurred, .service__item, .navigation__element > *:hover, .button:hover, .logo:hover {
+  transition: all 0.4s ease-out;
 }
 
 html {
@@ -463,6 +463,21 @@ option:not {
   background-color: #FFFFFF;
 }
 
+.button_selected {
+  padding-top: 11px;
+  padding-bottom: 11px;
+  font-family: "Inika", Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  width: 161px;
+  border: 1px solid #E06733;
+  border-radius: 5px;
+  background-color: #E06733;
+  color: #FFFFFF;
+}
+
 .button__bordered {
   font-family: "Inter";
   font-style: normal;
@@ -489,6 +504,20 @@ option:not {
   font-weight: 700;
   font-size: 20px;
   line-height: 20px;
+  color: #000000;
+}
+
+.call-us-button {
+  width: 122px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+.call-us-button a {
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 13px;
+  text-align: center;
+  text-decoration: none;
   color: #000000;
 }
 
@@ -622,6 +651,10 @@ about {
   margin-bottom: 55px;
 }
 
+.blurred {
+  filter: blur(3px);
+}
+
 .ico {
   display: inline-block;
   width: 16px;
@@ -731,10 +764,79 @@ about {
   margin-top: 148px;
 }
 
+.select-css::-ms-expand {
+  display: none;
+}
+
 .contact__header {
   display: flex;
   justify-content: center;
   padding-left: 41px;
+}
+
+.select-css::-ms-expand {
+  display: none;
+}
+
+.select-css:hover {
+  border: none;
+}
+
+.select-css:focus {
+  border: none;
+}
+
+select {
+  border: none;
+}
+select:hover {
+  border: none;
+}
+select::-ms-expand {
+  display: none;
+}
+
+.city-selected {
+  display: none;
+}
+
+.active {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 448px;
+  border: 1px solid #000000;
+  border-radius: 20px;
+  left: 60%;
+  top: 365%;
+  justify-content: center;
+  align-items: center;
+}
+
+.city-adress-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.left-side-city {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-family: "Inter";
+  ont-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  margin-right: 20px;
+}
+
+.right-side-city {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
 }
 
 .footer-link {
