--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
   padding: 0;
 }
 
-body {
+body,
+a {
   min-width: 480px;
   min-height: 100vh;
   font-family: 'Arial', sans-serif;
@@ -29,8 +30,13 @@ body {
   height: 30vh;
   min-height: 220px;  
   padding: 20px;
+  flex-wrap: wrap;
 }
-
+.player,
+.weather,
+.quote-block {
+  transition: .6s ease-out;
+}
 .progress-bar{
   display: flex;
   justify-content: space-between;
@@ -137,7 +143,10 @@ body {
 .player-icon,
 .slider-icon,
 .change-quote,
-.volume-button  {
+.volume-button, 
+.settings-button, 
+.github,
+.school{
   width: 36px;
   height: 32px;
   background-size: 32px 32px;
@@ -158,10 +167,100 @@ body {
 
 .player-icon:active,
 .slider-icon:active,
-.change-quote:active {
+.change-quote:active,
+.volume-button:active,
+.settings-button:active{
   border: 0;
   outline: 0;  
   transform: scale(1.1);
+}
+
+.github:hover,
+.school:hover {
+  border: 0;
+  outline: 0;  
+  transform: scale(1.1);
+}
+
+.settings{
+  visibility: hidden;
+  position: absolute;
+  bottom: 60px;
+  background-color: #fff;
+  border-radius: 3px;
+  opacity: 0.95;
+  z-index: 1;
+  box-shadow: 0 2px 10px 0 #0008;
+  transition: opacity .15s ease,filter .15s ease;
+  color: #58554B; 
+  padding: 20px;
+
+}
+.settings-row{
+  display: grid;
+  gap: 20px;
+
+  /* ! */
+  grid-template-columns: 150px 100px 36px 20px;
+  grid-template-rows: 24px;
+  align-items: center;
+  grid-template-areas:
+    "A  B C D"
+}
+
+.dotted{
+  border-bottom: #58554B dotted 2px;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+.A{
+  justify-self: start;
+  width: 150px;
+  text-align: left;
+  grid-area: A;
+}
+.B{
+  justify-self: end;
+  grid-area: B;
+}
+.C{
+  grid-area: C;
+}
+.D{
+  justify-self: start;
+  grid-area: D;
+}
+h2{
+  color: coral;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: 'Arial', sans-serif;
+}
+.settigs-toggle{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 2px;
+  width: 34px;
+  min-height: 20px;
+  background-repeat: no-repeat;
+  background-image: url("../assets/svg/settings_toggle.svg");
+  cursor: pointer;
+
+}
+.off-toggle{
+  justify-content: flex-end;
+  background-image: url("../assets/svg/settings_toggle_dark.svg");
+}
+
+.circle{
+  margin-top: 2px;
+  width: 12px; 
+  height: 12px;
+  border-radius: 50%;
+  background-color: #fff;
+
 }
 
 .play {
@@ -169,6 +268,16 @@ body {
   height: 40px;
   background-size: 40px 40px;
   background-image: url("../assets/svg/play.svg");
+}
+
+.settings-button {
+  background-image: url("../assets/svg/settings.svg");
+  opacity: 0.8;
+  width: 40;
+}
+.opened-settings{
+  transform: rotate(90deg) scale(1.2);
+  opacity: 1;
 }
 
 .pause {
@@ -182,6 +291,13 @@ body {
 .play-next {
   background-image: url("../assets/svg/play-next.svg");
 }
+.github{
+  background-image: url("../assets/svg/info/github-mark-white.svg");
+}
+.school{
+
+  background-image: url("../assets/svg/info/rs_school_js.svg");
+}
 
 .weather {
   display: flex;
@@ -192,6 +308,7 @@ body {
   width: 180px;
   min-height: 180px;  
   text-align: left;
+
 }
 
 .weather-error {
@@ -269,12 +386,13 @@ body {
   font-family: 'Arial-MT';
   font-size: 100px;
   letter-spacing: -4px;  
+  transition: .6s ease-out;
 }
-
 .date {
   min-height: 28px;
   font-size: 24px;
   margin-bottom: 20px;
+  transition: .6s ease-out;
 }
 
 .greeting-container {
@@ -285,6 +403,7 @@ body {
   min-height: 48px;
   width: 100vw;
   font-size: 40px;
+  transition: .6s ease-out;
 }
 
 .greeting {
@@ -312,13 +431,20 @@ body {
 
 .footer {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
   width: 100%;
   height: 30vh;
   min-height: 160px;  
   padding: 20px;
+}
+
+.info-block{
+  display: inline-block;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .change-quote {
@@ -328,10 +454,18 @@ body {
 
 .quote {
   min-height: 32px;
+  width: 1000px;
 }
 
 .author {
   min-height: 20px;
+}
+.year{
+  padding: 0 15px;
+  opacity: 0.8;
+}
+.quote-block{
+  margin-left: 120px;
 }
 
 @media (max-width: 768px) {
